# yugioh-deck-checker

./: .gitignore  Probability Calculator.ipynb  README.md  compose.override.yaml  compose.yaml  init-localstack.sh  lambda_function.py  serverless.yml
.github/workflows/: deploy-prod.yml
api/: Dockerfile  README.md  pyproject.toml
api/app/: logger.py  main.py  settings.py
api/app/dependencies/jobs/: aws_lambda.py  job.py  registry.py  runners.py  sqs.py
api/app/routers/: consistency.py  consistency_v2.py
api/app/schemas/: __init__.py  basemodel.py
api/tests/api/consistency/: test_create_and_read_job.py  test_create_and_read_job_v2.py
frontend/: .gitignore  .prettierrc  index.html  jest.config.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  utils.ts
frontend/src/components/dca/: deck-row.tsx
frontend/src/hooks/: useCardDatabase.ts
frontend/src/services/: consistency.ts  ydk-import.ts
frontend/src/services/calculator/: calculator.ts  (+1 more)
frontend/src/types/: deck.ts
functions/: compose.override.yaml  compose.yaml
functions/consistency/: .gitignore  Dockerfile  cards-detailed.json  local_run.py  main.py  pyproject.toml
functions/consistency/app/: main.py  utils.py
functions/consistency/app/calculator/: __init__.py  calculator.py  data.py  exceptions.py  result.py
functions/consistency/tests/unit/calculator/: test_hand_is_good.py  test_hand_is_wild.py  test_run_test_hand_with_gambling.py  test_simple_consistency.py
functions/load-card-database/: Dockerfile  pyproject.toml
functions/load-card-database/app/: main.py  transform.py
(+2 files in other folders)
