[project]
name = "yugioh-deck-checker-api"
version = "0.1.0"
description = "API wrapping deck performance checker for the Yu-Gi-Oh! trading card game."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aioboto3>=15.5.0",
    "fastapi[standard]>=0.135.1",
    "mangum>=0.21.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "ruff>=0.15.4",
]
