[project]
name = "yugioh-deck-checker-consistency-function"
version = "0.1.0"
description = "Function for calculating consistency from deck parameters"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.62",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]
